fixed keyboard feature